fix style issue to make the print more readable

--- a/app/Resources/public/css/style.css
+++ b/app/Resources/public/css/style.css
@@ -14,7 +14,7 @@ body {
 .thin-split {
     background: #555;
     display: block;
-    height: 1px;
+    height: 2px;
     margin-bottom: 2px;
 }
 
